История изменений miniShop.



1.0.0 beta2 (12.02.2012)
==============
- Добавил модифицированный сниппет getResources для ускорения загрузки категорий. От обычного отличается поддержкой мультикатегорий и дополнительных свойств.
- Английская локализация
- Множество различных изменений в коде для улучшения производительности и стабильности.


1.0.0 beta1 (10.02.2012)
==============
- Первый публичный релиз