@@ -33,7 +33,7 @@ $snippets[0]= $modx->newObject('modSnippet');
 $snippets[0]->fromArray(array(
     'id' => 0,
     'name' => 'msChangeWarehouse',
-    'description' => 'Сниппет для переключения активного склада на страницах сайта.',
+    'description' => 'Snippet for switch active warehouse on frontend.',
     'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/change_warehouse.php'),
 ),'',true,true);
 $snippets[0]->setProperties($properties);
@@ -42,7 +42,7 @@ $snippets[1]= $modx->newObject('modSnippet');
 $snippets[1]->fromArray(array(
     'id' => 0,
     'name' => 'msGetGoods',
-    'description' => 'Сниппет для выборки ресурсов по категориям. Использует getResources для вывода результатов, понимает его параметры и работает с getPage. ',
+    'description' => 'Returns comma separated ids list of resources, that match to category. Must be used with getResources',
     'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/getgoods.php'),
 ),'',true,true);
 $snippets[1]->setProperties($properties);
@@ -51,7 +51,7 @@ $snippets[2]= $modx->newObject('modSnippet');
 $snippets[2]->fromArray(array(
     'id' => 0,
     'name' => 'msGetPrice',
-    'description' => 'Сниппет для вычисления окончательной цены товара. Может использоваться как Output filter, принимает цену и параметры. В него вы можете написать любые правила для скидок или надбавок.',
+    'description' => 'Snippet for modification the goods price. Any rules for changing price will be here.',
     'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/getprice.php'),
 ),'',true,true);
 $snippets[2]->setProperties($properties);
@@ -60,7 +60,7 @@ $snippets[3]= $modx->newObject('modSnippet');
 $snippets[3]->fromArray(array(
     'id' => 0,
     'name' => 'msGetGoodsPlaceholder',
-    'description' => 'Фильтр вывода для получения параметров товаров, таких как цена, остаток на складе, изображение или артикул.',
+    'description' => 'Output filter for extended properties of goods, such as price, article, image and remains',
     'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/goods_placeholder.php'),
 ),'',true,true);
 $snippets[3]->setProperties($properties);
@@ -69,7 +69,7 @@ $snippets[4]= $modx->newObject('modSnippet');
 $snippets[4]->fromArray(array(
     'id' => 0,
     'name' => 'msGetGoodsPlaceholders',
-    'description' => 'Сниппет, который выводит на страницу все дополнительные свойства товаров через setPlaceholders(). Нужно использовать на странице товара.',
+    'description' => 'Snippet for setPlaceholders() all goods placeholders on goods page.',
     'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/goods_placeholders.php'),
 ),'',true,true);
 $snippets[4]->setProperties($properties);
@@ -78,7 +78,7 @@ $snippets[5]= $modx->newObject('modSnippet');
 $snippets[5]->fromArray(array(
     'id' => 0,
     'name' => 'miniShop',
-    'description' => 'Основной сниппет магазина. Обладает множеством функций. По умолчанию - выводит содержимое корзины.',
+    'description' => 'miniShop main snippet. Has many features, by default - show shopping cart with selected goods.',
     'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/minishop.php'),
 ),'',true,true);
 $snippets[5]->setProperties($properties);
@@ -87,7 +87,7 @@ $snippets[6]= $modx->newObject('modSnippet');
 $snippets[6]->fromArray(array(
     'id' => 0,
     'name' => 'msGetOrdersPlaceholders',
-    'description' => 'Сниппет для почтовых уведомлений. Выводит в письмо все плейсхолдеры заказа склада, адреса доставки и таблицу заказанных товаров.',
+    'description' => 'Snippet for showing various orders and goods placeholders in email notices. Should be called in email chunks.',
     'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/orders_placeholders.php'),
 ),'',true,true);
 $snippets[6]->setProperties($properties);
@@ -96,7 +96,7 @@ $snippets[7]= $modx->newObject('modSnippet');
 $snippets[7]->fromArray(array(
     'id' => 0,
     'name' => 'msGetResources',
-    'description' => 'Модифицированный getResources 1.4.2pl для miniShop. Поддержка мультикатегорий и дополнительных свойств товаров.',
+    'description' => 'A modified getResources 1.4.2pl for miniShop. Support multicategory and extended goods properties (price,article etc.). Recommended instead getResources + msGetGoods + msGetGoodsPlaceholder.',
     'snippet' => getSnippetContent($sources['source_core'].'/elements/snippets/ms_getresources.php'),
 ),'',true,true);
 $snippets[7]->setProperties($properties);
